--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 _site
-.sass-cache
-.jekyll-cache
+.DS_Store
+.jekyll
 .jekyll-metadata
 .bundle
-vendor
+.sass-cache
+Gemfile
+Gemfile.lock
+node_modules
+package.json
